@@ -4,6 +4,8 @@ Revision history for {{$dist->name}}
           require a CPAN::Meta::Requirements 2.121 to get the
           requirements_for_module (thanks, Olivier Mengué!)
 
+          'dzil run' with no arguments will now invoke a new shell.
+
 4.300014  2012-04-05 12:46:33 America/New_York
           added the CPANFile plugin to create "cpanfile" prereq format
 
